# OC_labs

./: CMakeLists.txt
example/: posix_ipc-example-server.c
lab1/: ch1.txt  ch2.txt  child1.c  parent.c
lab2/: lab2  lab2.c
lab3/: ch1.txt  ch2.txt  child  child.c  parent_3.c
