cmake_minimum_required(VERSION 3.28)
project(OC_lab C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_POSIX_C_SOURCE=200809L")
add_executable(OC_lab example/posix_ipc-example-client.c)
add_executable(posix_ipc-example-server.c example/posix_ipc-example-server.c)
#[[add_executable(server_lab lab1/child1.c)
add_executable(filter_str lab1/parent.c)
add_executable(child2 lab1/child2.c)]]
add_executable(child1_2 lab1/child1.c)
add_executable(parent lab1/parent.c)
add_executable(parent_3 lab3/parent_3.c)
add_executable(child3_2 lab3/child.c)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_POSIX_C_SOURCE=200809L")
add_executable(lab2 lab2/lab2.c)
